[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1_1"
path = "./src/bin/day1_1.rs"

[[bin]]
name = "day1_2"
path = "./src/bin/day1_2.rs"

[[bin]]
name = "day2_1"
path = "./src/bin/day2_1.rs"

[[bin]]
name = "day2_2"
path = "./src/bin/day2_2.rs"

[dependencies]
